优化安装文件